[package]
name = "dav"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
axum = { version = "0.6.20", features = ["headers", "http2"] }
dav-server = { version = "0.5.7", features = ["hyper"] }
futures-util = "0.3.28"
lazy_static = "1.4.0"
